Added Fulfillment.person and Fulfillment.contact
Added Fulfillment.person and Fulfillment.contact in addition to Fulfillment.agent to prevent backward compatibility issues. Have added the change in core as well.

--- a/protocol-specifications/core/v0/api/core.yaml
+++ b/protocol-specifications/core/v0/api/core.yaml
@@ -1779,8 +1779,10 @@ components:
               $ref: '#/components/schemas/Person'
             contact:
               $ref: '#/components/schemas/Contact'
-        person:
+        agent:
           $ref: '#/components/schemas/Agent'
+        person:
+          $ref: '#/components/schemas/Person'
         contact:
           $ref: '#/components/schemas/Contcat'
         start:
