--- a/protocol-specifications/core/v0/api/core.yaml
+++ b/protocol-specifications/core/v0/api/core.yaml
@@ -1779,7 +1779,7 @@ components:
               $ref: '#/components/schemas/Person'
             contact:
               $ref: '#/components/schemas/Contact'
-        agent:
+        person:
           $ref: '#/components/schemas/Agent'
         contact:
           $ref: '#/components/schemas/Contcat'
